--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==20.7
-psutil==5.9.6
-python-dotenv==1.0.0
-asyncio==3.4.3
+python-telegram-bot>=22.1
+psutil>=5.9.0
+python-dotenv>=1.0.0
