--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ LOGS_DIR=./logs
 # System Configuration
 TARGET_USER=ubuntu
 LOG_LEVEL=INFO
+
+# Paths for production (Ubuntu server)
+BOTS_DIR=~/bots
+LOGS_DIR=./logs
