--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,9 @@ MIN_FREE_RAM_MB=40
 MONITORING_INTERVAL=60
 
 # Paths
-BOTS_DIR=~/bots
+BOTS_DIR=/home/ubuntu/bots
 LOGS_DIR=./logs
 
 # System Configuration
 TARGET_USER=ubuntu
 LOG_LEVEL=INFO
-
-# Paths for production (Ubuntu server)
-BOTS_DIR=~/bots
-LOGS_DIR=./logs
