Fix ModuleNotFoundError in deployment
- Updated systemd service to use 'python -m src.main' instead of 'python main.py'
- Fixed relative imports in src/main.py to use dot notation
- This resolves the config module import error during deployment

--- a/systemd/saldoran-sentinel.service
+++ b/systemd/saldoran-sentinel.service
@@ -9,7 +9,7 @@ User=ubuntu
 Group=ubuntu
 WorkingDirectory=/home/ubuntu/SaldoranSentinelBot
 Environment=PATH=/home/ubuntu/SaldoranSentinelBot/venv/bin:/usr/local/bin:/usr/bin:/bin
-ExecStart=/home/ubuntu/SaldoranSentinelBot/venv/bin/python main.py
+ExecStart=/home/ubuntu/SaldoranSentinelBot/venv/bin/python -m src.main
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
 RestartSec=10
