--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,18 @@ jobs:
 
       - name: Pull and restart service on VPS
         run: |
+          # Уведомление о старте деплоя
+          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+            -d chat_id=${{ secrets.TELEGRAM_ADMIN_ID }} \
+            -d text="🚀 Начат деплой Saldoran Sentinel на сервере 185.233.45.95..."
+
           ssh -o StrictHostKeyChecking=no root@185.233.45.95 << 'EOF'
-            cd /home/ubuntu/SaldoranSentinelBot
+            set -e
+            cd /home/SaldoranSentinelBot
             git pull
             source venv/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
             sudo systemctl restart saldoran-sentinel
+            echo "✅ Saldoran Sentinel перезапущен успешно"
           EOF
